# game_master_helper

./: .gitignore  LICENSE  README.md
desktop_dev/: Cargo.toml
desktop_dev/src/: main.rs
gm_helper_corelibrary/: Cargo.toml
gm_helper_corelibrary/src/: lib.rs
gm_helper_corelibrary/src/dnd_tools/: mod.rs
gm_helper_corelibrary/src/entities/: mod.rs
gm_helper_corelibrary/src/global_enums/: mod.rs
gm_helper_corelibrary/src/helper_functions/: mod.rs
gm_helper_corelibrary/src/libtext/: mod.rs
ui/: Cargo.toml
ui/src/: lib.rs  main.rs
ui/src/buttons/: mod.rs
ui/src/collapsables/: mod.rs  ui_sides.rs
ui/src/desktop/: mod.rs
ui_desktop/: Cargo.toml
whisper_installer/: Cargo.toml
whisper_installer/src/: lib.rs
