[package]
name = "gm_helper_corelibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store_rpg = {path = "./store_rpg"}
entities = {path = "./entities"}
narratives = {path = "./narratives"}
gui = {path = "./gui"}
sqlite = "0.30.4"

[workspace]
members = [
	"roll_dice",
	"narratives",
	"entities",
	"libtext",
	"store_rpg",
]